name:                miso-arch
version:             0.1.0.0
synopsis:            Chapter 02
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 01-introduction
  main-is:             Introduction.hs
  build-depends:       base
                     , miso
  default-language:    Haskell2010

executable 03-messages
  main-is:             Messages.hs
  build-depends:       base
                     , miso
  default-language:    Haskell2010
