name:                subs-cmds
version:             0.1.0.0
synopsis:            Chapter 03
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 01-subs
  main-is:             Subs.hs
  build-depends:       base
                     , containers
                     , miso
  default-language:    Haskell2010

executable 02-commands
  main-is:             Commands.hs
  build-depends:       base
                     , miso
                     , random
  default-language:    Haskell2010
