name:                starting
version:             0.1.0.0
synopsis:            Chapter 04
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable starting
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base
                     , miso
  default-language:    Haskell2010
