name:                resources
version:             0.1.0.0
synopsis:            Chapter 05
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable resources
  main-is:             Main.hs
  other-modules:       Action
                     , Model
                     , Player.List
                     , Update
                     , View
  hs-source-dirs:      src
  build-depends:       base
                     , miso
  default-language:    Haskell2010
