name:                fetching-resources
version:             0.1.0.0
synopsis:            Chapter 06
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fetching-resources
  main-is:             Main.hs
  other-modules:       Action
                     , Effect
                     , Model
                     , Player.List
                     , Update
                     , View
  hs-source-dirs:      src
  build-depends:       aeson
                     , base
                     , miso
  default-language:    Haskell2010
